[metadata]
name=containerregistry

[bdist_wheel]
universal = 1

[devpi:upload]
formats = bdist_wheel,sdist.tgz

[options]
#python_requires=>=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, <4
setup_requires =
  setuptools_scm
packages = containerregistry.tools, containerregistry.client, containerregistry.transport
install_requires =
	httplib2
	six
	oauth2client
	futures
